getting curr location, store it and show it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,10 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   uuid: ^4.4.2
-  location: ^7.0.0
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
-  http: ^1.2.2
+  geolocator: ^12.0.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
